--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -3,12 +3,8 @@
 # 
 # Required secrets:
 #   - SONAR_TOKEN: SonarCloud authentication token
-#   - SONAR_PROJECT_KEY: SonarCloud project key
-#   - SONAR_ORGANIZATION: SonarCloud organization name
 #
-# Optional secrets:
-#   - SONARQUBE_HOST: SonarQube server URL (if using self-hosted SonarQube)
-#   - SONARQUBE_TOKEN: SonarQube authentication token (if using self-hosted SonarQube)
+# Note: Project key and organization are read from sonar-project.properties
 
 name: CI - Pull Request Checks
 
@@ -48,20 +44,15 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # Run unit tests (placeholder for now)
-      - name: Run unit tests (placeholder)
-        run: |
-          echo "SKIP - tests to be added by test owner"
-          # Future implementation:
-          # npm run test -- --coverage --watchAll=false
-          # or: npm test -- --coverage --ci
+      # Run unit tests with coverage
+      - name: Run tests with coverage
+        run: npm run test:coverage
 
   sonarcloud-analysis:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: [lint-and-build]
-    # Only run SonarCloud analysis on Pull Requests targeting main
-    if: ${{ github.event_name == 'pull_request' && github.base_ref == 'main' }}
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
     steps:
       # Checkout source code with full git history (required for SonarCloud)
       - name: Checkout
@@ -80,40 +71,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # Run tests to generate coverage report (placeholder for now)
+      # Run tests to generate coverage report
       - name: Run tests to generate coverage
-        run: |
-          echo "Placeholder for test coverage - to be implemented by test owner"
-          # Future implementation:
-          # npm run test -- --coverage --watchAll=false --coverageReporters=lcov
-          # This should generate coverage/lcov.info file
+        run: npm run test:coverage
 
       # Run SonarCloud scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
-        with:
-          args: >-
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-            -Dsonar.sources=src
-            -Dsonar.tests=tests
-            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.spec.ts,**/*.test.ts
-            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Optional: Run SonarQube scan if self-hosted server is configured
-      - name: SonarQube Optional Scan
-        if: ${{ secrets.SONARQUBE_TOKEN != '' && secrets.SONARQUBE_HOST != '' }}
-        run: |
-          echo "Running SonarQube scanner (optional self-hosted instance)"
-          # Install sonar-scanner CLI if needed
-          # npm install -g sonarqube-scanner
-          # sonar-scanner \
-          #   -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-          #   -Dsonar.host.url=${{ secrets.SONARQUBE_HOST }} \
-          #   -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }} \
-          #   -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-        continue-on-error: true
