--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -50,7 +50,6 @@ jobs:
     name: Deploy to Render
     runs-on: ubuntu-latest
     needs: build-and-test
-    # Only deploy if build-and-test job succeeded
     if: needs.build-and-test.result == 'success'
     steps:
       # Checkout source code
@@ -59,11 +58,18 @@ jobs:
 
       # Deploy to Render if credentials are configured
       - name: Deploy to Render
-        if: secrets.RENDER_API_KEY != '' && secrets.RENDER_SERVICE_ID != ''
+        continue-on-error: true
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
         run: |
-          echo "Deploying to Render service: ${{ secrets.RENDER_SERVICE_ID }}"
-          curl -X POST "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}" \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          if [ -z "$RENDER_API_KEY" ] || [ -z "$RENDER_SERVICE_ID" ]; then
+            echo "Render credentials not configured. Skipping deployment."
+            exit 0
+          fi
+          echo "Deploying to Render service: ${RENDER_SERVICE_ID}"
+          curl -X POST "https://api.render.com/deploy/srv-${RENDER_SERVICE_ID}" \
+            -H "Authorization: Bearer ${RENDER_API_KEY}" \
             -H "Content-Type: application/json" \
             -d '{}'
           echo "Deployment triggered successfully"
