--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,32 +17,21 @@ sonar.organization=ivanausechas
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
-# Project metadata
-sonar.projectName=Finance Manager Backend
-sonar.projectVersion=1.0.0
-
-# Source code location
-sonar.sources=src
+# Test source directories
 sonar.tests=src
 sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
 
 # Exclude files from analysis
-sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/*.test.ts,**/*.spec.ts,src/index.ts,src/server.ts
+sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/*.test.ts,**/*.spec.ts
 
-# TypeScript/JavaScript specific settings
+# TypeScript/JavaScript coverage report
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# Coverage settings
+# Coverage exclusions
 sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,src/index.ts,src/server.ts,src/config/**
 
-# Encoding
-sonar.sourceEncoding=UTF-8
-
-# Quality Gate thresholds (enforced by SonarCloud)
-# New code coverage must be >= 80%
