--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@prisma/client": "^6.19.0",
     "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
