docs: add SonarCloud metrics configuration and documentation
- Configure cyclomatic complexity threshold (max 10 per function)
- Set code coverage minimum to 60% as required
- Add code duplication, technical debt, and code smells monitoring
- Create comprehensive SONARCLOUD-METRICS.md guide
- Update README.md with SonarCloud metrics section
- Configure quality gate thresholds in sonar-project.properties

Metrics configured:
- Cyclomatic Complexity: max 10
- Code Coverage: minimum 60% (target 80%)
- Code Duplication: minimal
- Technical Debt: rating A
- Reliability: rating A
- Security: rating A

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,3 +35,27 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # Coverage exclusions
 sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,src/index.ts,src/server.ts,src/config/**
 
+# Quality Gate thresholds
+# Code Coverage must exceed 60%
+sonar.coverage.minimum=60.0
+
+# Cyclomatic Complexity threshold
+# Maximum complexity allowed per function (default is 10)
+sonar.javascript.complexity.threshold=10
+
+# Code Duplication threshold (percentage)
+sonar.cpd.javascript.minimumtokens=50
+
+# Technical Debt and Code Smells
+# Maintainability rating threshold (A-E, where A is best)
+sonar.maintainability.rating.threshold=A
+
+# Reliability rating threshold
+sonar.reliability.rating.threshold=A
+
+# Security rating threshold
+sonar.security.rating.threshold=A
+
+# Additional analysis parameters
+sonar.qualitygate.wait=false
+sonar.verbose=false
