--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,14 +24,38 @@ sonar.sourceEncoding=UTF-8
 
 # Test source directories
 sonar.tests=src
-sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
+sonar.test.inclusions=*/.test.ts,*/.spec.ts
 
 # Exclude files from analysis
-sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/*.test.ts,**/*.spec.ts
+sonar.exclusions=*/node_modules/,/dist/,/coverage/,/.test.ts,*/.spec.ts
 
 # TypeScript/JavaScript coverage report
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Coverage exclusions
-sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,src/index.ts,src/server.ts,src/config/**
+sonar.coverage.exclusions=*/.test.ts,*/.spec.ts,src/index.ts,src/server.ts,src/config/**
 
+# Quality Gate thresholds
+# Code Coverage must exceed 60%
+sonar.coverage.minimum=60.0
+
+# Cyclomatic Complexity threshold
+# Maximum complexity allowed per function (default is 10)
+sonar.javascript.complexity.threshold=10
+
+# Code Duplication threshold (percentage)
+sonar.cpd.javascript.minimumtokens=50
+
+# Technical Debt and Code Smells
+# Maintainability rating threshold (A-E, where A is best)
+sonar.maintainability.rating.threshold=A
+
+# Reliability rating threshold
+sonar.reliability.rating.threshold=A
+
+# Security rating threshold
+sonar.security.rating.threshold=A
+
+# Additional analysis parameters
+sonar.qualitygate.wait=false
+sonar.verbose=false
