--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.19.1",
     "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -52,6 +53,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.19.0"
+    "openai": "^6.10.0",
+    "prisma": "^6.19.1"
   }
 }
