feat: add Render deployment configuration
- Add render.yaml Blueprint for automatic deployment
- Add RENDER_DEPLOY.md quick deployment guide
- Add RENDER_CHECKLIST.md pre-deployment checklist
- Add RENDER_SETUP_SUMMARY.md configuration summary
- Update DEPLOYMENT.md with detailed Render instructions
- Update .env.example with all required variables
- Add postinstall and deploy scripts to package.json
- Update README.md with deployment section

Render configuration includes:
- Automatic web service setup
- PostgreSQL database with auto-connection
- Environment variables configuration
- Prisma migrations on deploy
- Health check endpoint
- Auto-deploy from main branch

--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,23 @@ NODE_ENV=development
 DATABASE_URL="postgresql://user:password@localhost:5432/finance_manager?schema=public"
 
 # JWT Configuration
+# Generate a secure secret: openssl rand -base64 32
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # CORS Configuration
-# Frontend URL for CORS (comma-separated for multiple origins)
+# Frontend URL for CORS
 FRONTEND_URL=http://localhost:3000
 
+# SendGrid Email Service (Required for production)
+# Get your API key at: https://app.sendgrid.com/settings/api_keys
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM_EMAIL=noreply@yourdomain.com
+
+# Google Gemini AI (Required for AI chat features)
+# Get your API key at: https://ai.google.dev/
+GEMINI_API_KEY=your-gemini-api-key
+
 # Optional: Render Deployment
+# These are configured automatically in render.yaml
 # RENDER_API_KEY=your-render-api-key
 # RENDER_SERVICE_ID=your-service-id
