--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "start": "node dist/index.js",
     "postinstall": "prisma generate",
     "deploy": "npx prisma migrate deploy",
@@ -31,7 +31,6 @@
     "@types/express": "^5.0.5",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
@@ -41,13 +40,13 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.19.1",
     "@sendgrid/mail": "^8.1.6",
+    "@types/node": "^20.11.24",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -56,6 +55,7 @@
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.10.0",
-    "prisma": "^6.19.1"
+    "prisma": "^6.19.1",
+    "typescript": "^5.3.3"
   }
 }
