--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     region: oregon # Change to your preferred region (ohio, oregon, frankfurt, singapore)
     plan: free # Options: free, starter, standard, pro
     branch: main # Deploy from main branch
-    buildCommand: npm install && npm run build && npx prisma generate && npx prisma migrate deploy
+    buildCommand: npm ci && npm run build && npx prisma generate && npx prisma migrate deploy
     startCommand: npm start
     healthCheckPath: /health
     envVars:
